# ibse

./: CMakeLists.txt  README.md
data/: README  kalman_test_poses.txt
data/Oct30_22_37_24/: accelerometer.txt  gyroscope.txt  imu.data  poses.txt  raw_poses.txt
data/Oct30_22_37_24/original/: image_times  imu.data_raw  obstacle_out
data/Oct30_22_37_24/two_secs/: accelerometer.txt  gyroscope.txt  poses.txt  visacc.m
data/Oct30_22_38_33/: README
data/Oct30_22_38_33/first_two_seconds/: accelerometer.txt  gyroscope.txt  poses.txt
data/Oct30_22_38_33/full_data/: accelerometer.txt  gyroscope.txt  poses.txt  raw_poses.txt
data/Oct30_22_38_33/original/: image_times  imu_raw  obstacle_out
include/: ibse.h  ibse_common.h  ibse_impl.h  ibse_internal.h  ibse_testing.h
src/: align_camera_imu_test.cpp  estimate_alignment_test.cpp  estimate_scale_test.cpp  golden_section_search_test.cpp  ibse.cpp  ibse_impl.cpp  ibse_internal.cpp  ibse_test.cpp  ibse_testing.cpp  initialize_estimates_test.cpp  kalman_test.cpp  linear_interpolation_test.cpp  ltsi_test.cpp  moving_average_test.cpp  objective_function_test.cpp  rotation_test.cpp
